# m-shortener

./: Cargo.toml  auth.token  gencerts.py  runtime-config.toml  spin.toml
data.sqld/dbs/default/: data-shm  data-wal  stats.json  wallog
data.sqld/metastore/: data  data-shm
src/: lib.rs
