[package]
name = "m-shortener"
authors = ["Adam Sobotka <vorcigernix@gmail.com>"]
description = "Meiro Shortener"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.0.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
rand = "0.8.5"
wasi = "0.13.1"
wit-bindgen-rt = "0.27.0"

[workspace]
